--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.5.0",
     "bootstrap": "^5.2.3",
+    "bootstrap-vue": "^2.23.1",
     "chart.js": "^4.3.0",
     "firebase": "^9.23.0",
     "sweetalert2": "^11.7.12",
