--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-vue": "^2.23.1",
     "chart.js": "^4.3.0",
     "firebase": "^9.23.0",
+    "jspdf": "^2.5.1",
     "sweetalert2": "^11.7.12",
     "vue": "^3.3.2",
     "vue-axios": "^3.5.2",
